--- a/index.html
+++ b/index.html
@@ -5957,7 +5957,7 @@ let currentBatchEditId = null; // 当前批量上传编辑的行ID
     });
     
     
-    // 级联选择器功能 - 移至全局作用域以支持HTML onclick属性
+    // 级联选择器功能 - 移至全局作用域以支持HTML， onclick属性
     function toggleCascader(id) {
         const container = document.getElementById(id);
         const dropdown = container.querySelector('.cascader-dropdown');
